Fixed white space issue on sketch grid

--- a/style.css
+++ b/style.css
@@ -50,13 +50,14 @@ button {
 }
 
 .sketch-container {
+    box-sizing: border-box;
+    border: 2px solid red;
     background-color: #ffffff;
-    border-color: #FE5163;
-    border-style: solid;
     display: flex;
     flex-direction: column;
     height: 500px;
     width: 500px;
+    box-sizing: border-box;
 }
 
 .sketch-row {
@@ -67,4 +68,3 @@ button {
     background-color: #ffffff;
     flex: 1;
 }
-
